--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,8 @@ docker-build-master:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
-    - chmod -R o-w .
+    - umask 0022
+    - chmod -R og-w .
     - docker build -t jgoerzen/tor .
     - docker tag jgoerzen/tor jgoerzen/tor:bullseye
     - docker push jgoerzen/tor
